# swagger_output.json
@@ -89,6 +89,10 @@
               "schema": {
                 "type": "object",
                 "properties": {
+                  "persona": {
+                    "type": "string",
+                    "example": "default-persona"
+                  },
                   "model": {
                     "type": "string",
                     "example": "gemini-3.1-flash-lite"
@@ -123,6 +127,10 @@
               "schema": {
                 "type": "object",
                 "properties": {
+                  "persona": {
+                    "type": "string",
+                    "example": "default-persona"
+                  },
                   "model": {
                     "type": "string",
                     "example": "gemini-3.1-flash-lite"
@@ -162,6 +170,10 @@
               "schema": {
                 "type": "object",
                 "properties": {
+                  "persona": {
+                    "type": "string",
+                    "example": "default-persona"
+                  },
                   "model": {
                     "type": "string",
                     "example": "gemini-3.1-flash-lite"
@@ -201,6 +213,10 @@
               "schema": {
                 "type": "object",
                 "properties": {
+                  "persona": {
+                    "type": "string",
+                    "example": "default-persona"
+                  },
                   "model": {
                     "type": "string",
                     "example": "gemini-3.1-flash-lite"
@@ -240,6 +256,10 @@
               "schema": {
                 "type": "object",
                 "properties": {
+                  "persona": {
+                    "type": "string",
+                    "example": "default-persona"
+                  },
                   "model": {
                     "type": "string",
                     "example": "gemini-3.1-flash-lite"
